--- a/AutoCmdb/templates/base.html
+++ b/AutoCmdb/templates/base.html
@@ -8,12 +8,10 @@
     <meta name="author" content="">
 
 
-    <title>Dashboard</title>
+    {% block title %}CMDB{% endblock %}
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
-    <link href="/static/css/bootstrap-datepicker.css" rel="stylesheet">
-
     <link href="/static/css/dashboard.css" rel="stylesheet">
     <link href="/static/css/all.css" rel="stylesheet">
 
@@ -22,9 +20,12 @@
 ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/js/jquery-3.3.1.js"></script>
-    <script src="/static/js/bootstrap-datepicker.js"></script>
     <script src="/static/js/bootstrap.js"></script>
     <script src="/static/js/all.js"></script>
+
+
+    {% block head %}
+    {% endblock %}
 
 
 </head>
@@ -41,7 +42,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{% block title %}Dashboard{% endblock %}</a>
+            <a class="navbar-brand" href="#">CMDB</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
