--- a/AutoCmdb/templates/asset/index.html
+++ b/AutoCmdb/templates/asset/index.html
@@ -73,7 +73,7 @@
 
 
         <!--- 資產列表-->
-        <table class="table" id="mytable">
+        <table class="table" id="mytable" style="margin-top: 20px">
             <thead>
             <tr>
                 <th>資產編號</th>
@@ -185,7 +185,36 @@
 
 
             </tbody>
+
+
+            <tfoot>
+            <th colspan="7">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination pull-right">
+                        <li>
+                            <a href="#" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="#">5</a></li>
+                        <li>
+                            <a href="#" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+
+            </th>
+
+            </tfoot>
+
         </table>
+
 
     </div>
 
