--- a/AutoCmdb/templates/asset/index.html
+++ b/AutoCmdb/templates/asset/index.html
@@ -6,9 +6,17 @@
     <!-- CSS -->
     <link href="/static/css/bootstrap-datepicker.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="/static/css/bootstrap-select.css">
+
+
+
     <!--  JavaScript -->
     <script src="/static/js/bootstrap-datepicker.js"></script>
     <script src="/static/js/bootstrap-datepicker.zh-TW.min.js"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="/static/js/bootstrap-select.js"></script>
+
 
 
 {% endblock %}
@@ -39,24 +47,26 @@
 
                     <div class="form-group">
                         <label for="inputsearch" class="col-form-label">搜尋</label>
-                        <input type="" class="" id="search" placeholder="">
+                        <input type="" class="" name='name' id="search" placeholder="" value="{{ name }}">
                     </div>
+
 
                     <div class="form-group">
                         <label class="col-form-label">類型</label>
-                        <select class="form-control">
-                            <option>-------</option>
+                        <select class="selectpicker" name='cate_id' id='category'>
+                            <option value="">-------</option>
                             {% for category in category_obj %}
                                 <option value="{{ category.id }}">{{ category.name }}({{ category.code }})</option>
                             {% endfor %}
                         </select>
+
                     </div>
 
 
                     <div class="form-group">
                         <label class="col-form-label">部門</label>
-                        <select class="form-control">
-                            <option>-------</option>
+                        <select class="form-control" name="dent_id">
+                            <option value="">-------</option>
                             {% for department in department_obj %}
                                 <option value="{{ department.id }}">{{ department.name }}部({{ department.code }})</option>
                             {% endfor %}
@@ -64,7 +74,7 @@
                     </div>
 
                     <div class="form-group">
-                        <button type="button" class="btn btn-success" style="margin-left: 20px">Submit</button>
+                        <button type="submit" class="btn btn-success" style="margin-left: 20px">Submit</button>
                     </div>
 
                 </form>
@@ -191,21 +201,7 @@
             <th colspan="7">
                 <nav aria-label="Page navigation">
                     <ul class="pagination pull-right">
-                        <li>
-                            <a href="#" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </li>
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li>
-                            <a href="#" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </li>
+                        {% get_pageer asset_obj search_field %}
                     </ul>
                 </nav>
 
@@ -215,7 +211,29 @@
 
         </table>
 
+    </div>
 
+
+
+    <div class="container">
+        <div class="col-sm-7 pull-right well">
+            <form class="form-inline" action="#" method="get">
+                <div class="input-group col-sm-8">
+                    <input class="form-control" type="text" value="" placeholder="Search" name="q">
+                    <div class="input-group-btn">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Select
+                            <span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                        </ul>
+                        <input type="hidden" name="category" class="category">
+                    </div><!-- /btn-group -->
+                </div>
+                <button class="btn btn-primary col-sm-3 pull-right" type="submit">Search</button>
+            </form>
+        </div>
     </div>
 
     <!--- 新增資產表單-->
@@ -319,7 +337,12 @@
                     format: "yyyy-mm-dd",
                     todayHighlight: true,
 
-                })
+                });
+
+
+
+
+
 
 
         })
