--- a/AutoCmdb/templates/asset/index.html
+++ b/AutoCmdb/templates/asset/index.html
@@ -47,13 +47,13 @@
 
                     <div class="form-group">
                         <label for="inputsearch" class="col-form-label">搜尋</label>
-                        <input type="" class="" name='name' id="search" placeholder="" value="{{ name }}">
+                        <input type="" class="form-control" name='name' id="search" placeholder="" value="{{ name }}">
                     </div>
 
 
                     <div class="form-group">
                         <label class="col-form-label">類型</label>
-                        <select class="selectpicker" name='cate_id' id='category'>
+                        <select class="selectpicker" name='cate_id' data-width="fit">
                             <option value="">-------</option>
                             {% for category in category_obj %}
                                 <option value="{{ category.id }}">{{ category.name }}({{ category.code }})</option>
@@ -65,7 +65,7 @@
 
                     <div class="form-group">
                         <label class="col-form-label">部門</label>
-                        <select class="form-control" name="dent_id">
+                        <select class="selectpicker" name="dent_id" data-width="fit">
                             <option value="">-------</option>
                             {% for department in department_obj %}
                                 <option value="{{ department.id }}">{{ department.name }}部({{ department.code }})</option>
@@ -215,26 +215,6 @@
 
 
 
-    <div class="container">
-        <div class="col-sm-7 pull-right well">
-            <form class="form-inline" action="#" method="get">
-                <div class="input-group col-sm-8">
-                    <input class="form-control" type="text" value="" placeholder="Search" name="q">
-                    <div class="input-group-btn">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Select
-                            <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                        </ul>
-                        <input type="hidden" name="category" class="category">
-                    </div><!-- /btn-group -->
-                </div>
-                <button class="btn btn-primary col-sm-3 pull-right" type="submit">Search</button>
-            </form>
-        </div>
-    </div>
 
     <!--- 新增資產表單-->
     <div class="modal fade" id="assetform_add_Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -338,6 +318,17 @@
                     todayHighlight: true,
 
                 });
+
+            $(".selectpicker[name='cate_id']").selectpicker('val', {{ cate_id }});
+            $(".selectpicker[name='dent_id']").selectpicker('val', {{ dent_id }});
+
+
+
+
+
+
+
+
 
 
 
